# flamura

./: README.md
py_desktop_tailwind/: .gitignore  README.md  pyproject.toml
py_desktop_tailwind/examples/: hello.html  hello_app.py
src/py_desktop_tailwind/: core.py
